--- a/src/pages/Profile/UserTrophy/style.scss
+++ b/src/pages/Profile/UserTrophy/style.scss
@@ -1,11 +1,9 @@
 .profile-wrapper .user-trophy-wrapper {
-	border: solid #40a9ff 1px;
-	border-radius: 10px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-
+	padding: 10px;
 	.name {
 		margin-top: 10px;
 		font-size: 20px;
@@ -21,11 +19,11 @@
 		.ant-tag {
 			margin: 0 5px;
 			width: 90px;
-			height: 40px;
+			height: 30px;
 			text-align: center;
-			font-size: 16px;
-			line-height: 40px;
+			font-size: 14px;
+			line-height: 30px;
 		}
-		margin-top: 15px;
+		margin-top: 5px;
 	}
 }
