--- a/src/pages/Profile/style.scss
+++ b/src/pages/Profile/style.scss
@@ -1,10 +1,10 @@
 .profile-wrapper {
 	display: grid;
-	grid-template-columns: 450px auto;
-	column-gap: 20px;
-	.right {
-		display: grid;
-		grid-template-rows: 350px auto;
-		row-gap: 10px;
+	grid-template-columns: 40% 60%;
+	grid-template-rows: auto auto;
+	column-gap: 10px;
+	row-gap: 10px;
+	.game-history-wrapper {
+		grid-column: span 2;
 	}
 }
