complete game replay

--- a/src/pages/GameReplay/Square/style.scss
+++ b/src/pages/GameReplay/Square/style.scss
@@ -4,4 +4,10 @@
 	font-weight: bold;
 	padding: 0;
 	font-size: 20px;
+	&.current {
+		background-color: #ffd591;
+	}
+	&.win-cell {
+		background-color: #87d068;
+	}
 }
