fix locale, interceptor

--- a/src/components/LoadingIndicator/styles.scss
+++ b/src/components/LoadingIndicator/styles.scss
@@ -1,5 +1,5 @@
 .loading-indicator-wrapper {
-	height: 100vh;
+	height: calc(100vh - 200px);
 	display: flex;
 	align-items: center;
 	justify-content: center;
